# novelty_rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
reference/: LJ037-0171.csv  REAMDE.md  create_reference.py  environment.yaml
src/: main.rs
tests/: test_output.rs
